[FIX] Invisible sign in button in b4 now visible

--- a/LifeCycle/css/lifecycle_bootstrap4.css
+++ b/LifeCycle/css/lifecycle_bootstrap4.css
@@ -14,7 +14,7 @@
     background-color: #e9eff3 !important;
 }
 
-btn-outline-primary {
+.btn-outline-primary {
     color: #005c8f !important;
     background-color: #e9eff3 !important;
 }
